Fixed vertical scrollbar

--- a/style/page.styl
+++ b/style/page.styl
@@ -1,3 +1,6 @@
+html
+  overflow-y: scroll
+
 h1, h2, h3, h4, h5, h6, #title
   font-family: LatoRegular, $baseFontFamily
   font-weight: normal
